--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up .NET
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '8.0.x'  # Use the version you are working with
+          dotnet-version: '8.0.101'
 
       - name: Restore dependencies
         run: dotnet restore ./CICD/CICD.csproj
